--- a/website/index.html
+++ b/website/index.html
@@ -8,81 +8,188 @@
 	<title>Rusty Vault</title>
 </head>
 <body>
+<main>
+	<section class="hero">
+		<picture class="logo">
+			<source media="(max-width: 320px)" srcset="assets/logo-128.webp" />
+			<source media="(max-width: 600px)" srcset="assets/logo-256.webp" />
+			<source media="(max-width: 700px)" srcset="assets/logo-512.webp" />
+			<source media="(max-width: 1000px)" srcset="assets/logo-1024.webp" />
+			<img src="assets/logo-2048.webp" alt="The Vault logo which is a rusty circular vault door with a hindge on the left and big bolts alla round it's edge" />
+		</picture>
 
-<section class="hero">
-	<picture class="logo">
-		<source media="(max-width: 320px)" srcset="assets/logo-128.webp" />
-		<source media="(max-width: 600px)" srcset="assets/logo-256.webp" />
-		<source media="(max-width: 700px)" srcset="assets/logo-512.webp" />
-		<source media="(max-width: 1000px)" srcset="assets/logo-1024.webp" />
-		<img src="assets/logo-2048.webp" alt="The Vault logo which is a rusty circular vault door with a hindge on the left and big bolts alla round it's edge" />
-	</picture>
+		<h1>Vault</h1>
 
-	<h1>Vault</h1>
+		<p class="lead">
+			A multi-platform password manager written in rust that stays on your
+			computer, with a database easily accessible by you, heavily encrypted with
+			a nice UX.
+		</p>
 
-	<p class="lead">
-		A multi-platform password manager written in rust that stays on your
-		computer, with a database easily accessible by you, heavily encrypted with
-		a nice UX.
-	</p>
+		<a id="cta" class="btn" href="https://github.com/dominikwilkowski/vault/releases/latest/download/Vault-macos-latest.zip" target="_blank" rel="noopener noreferrer">Download</a>
+		<dl class="downloadlist">
+			<dt>
+				<svg viewBox="0 0 170 170" fill="currentColor">
+					<path d="M150.4 130.3a88 88 0 0 1-8.7 15.6c-4.6 6.5-8.4 11-11.3 13.6a21.8 21.8 0 0 1-14.4 6.3c-3.7 0-8.1-1-13.3-3.2-5.2-2-10-3.1-14.3-3.1-4.6 0-9.5 1-14.8 3.1A39.7 39.7 0 0 1 61 166c-5 .2-9.9-2-14.8-6.5a97.1 97.1 0 0 1-29.4-68c0-11 2.4-20.3 7.1-28.2a41.3 41.3 0 0 1 34.7-20.5c4 0 9 1.2 15.4 3.6A49.6 49.6 0 0 0 86.2 50c1.3 0 5.9-1.4 13.6-4.3a44.9 44.9 0 0 1 18.4-3.2 39.2 39.2 0 0 1 30.7 16.1 34.1 34.1 0 0 0-18.1 31c0 10.3 3.8 19 11.2 25.8 3.3 3.1 7 5.6 11.2 7.3l-2.8 7.5zM119 7.3c0 8-3 15.6-8.8 22.6C103 38.2 94.5 43 85.2 42.3l-.2-3c0-7.9 3.4-16.2 9.4-23 3-3.4 6.8-6.3 11.4-8.6 4.7-2.2 9-3.5 13.1-3.7.2 1 .2 2.2.2 3.2z"></path>
+				</svg>
+			</dt>
+			<dd>
+				<ul>
+					<li>
+						<a href="https://github.com/dominikwilkowski/vault/releases/latest/download/Vault-macos-14.zip" target="_blank" rel="noopener noreferrer">macOS 14</a>
+					</li>
+					<li>
+						<a href="https://github.com/dominikwilkowski/vault/releases/latest/download/Vault-macos-13.zip" target="_blank" rel="noopener noreferrer">macOS 13</a>
+					</li>
+					<li>
+						<a href="https://github.com/dominikwilkowski/vault/releases/latest/download/Vault-macos-12.zip" target="_blank" rel="noopener noreferrer">macOS 12</a>
+					</li>
+					<li>
+						<a href="https://github.com/dominikwilkowski/vault/releases/latest/download/Vault-macos-11.zip" target="_blank" rel="noopener noreferrer">macOS 11</a>
+					</li>
+				</ul>
+			</dd>
 
-	<a id="cta" class="btn" href="https://github.com/dominikwilkowski/vault/releases/latest/download/Vault-macos-latest.zip" target="_blank" rel="noopener noreferrer">Download</a>
-	<dl class="downloadlist">
-		<dt>
-			<svg viewBox="0 0 170 170" fill="currentColor">
-				<path d="M150.4 130.3a88 88 0 0 1-8.7 15.6c-4.6 6.5-8.4 11-11.3 13.6a21.8 21.8 0 0 1-14.4 6.3c-3.7 0-8.1-1-13.3-3.2-5.2-2-10-3.1-14.3-3.1-4.6 0-9.5 1-14.8 3.1A39.7 39.7 0 0 1 61 166c-5 .2-9.9-2-14.8-6.5a97.1 97.1 0 0 1-29.4-68c0-11 2.4-20.3 7.1-28.2a41.3 41.3 0 0 1 34.7-20.5c4 0 9 1.2 15.4 3.6A49.6 49.6 0 0 0 86.2 50c1.3 0 5.9-1.4 13.6-4.3a44.9 44.9 0 0 1 18.4-3.2 39.2 39.2 0 0 1 30.7 16.1 34.1 34.1 0 0 0-18.1 31c0 10.3 3.8 19 11.2 25.8 3.3 3.1 7 5.6 11.2 7.3l-2.8 7.5zM119 7.3c0 8-3 15.6-8.8 22.6C103 38.2 94.5 43 85.2 42.3l-.2-3c0-7.9 3.4-16.2 9.4-23 3-3.4 6.8-6.3 11.4-8.6 4.7-2.2 9-3.5 13.1-3.7.2 1 .2 2.2.2 3.2z"></path>
-			</svg>
-		</dt>
-		<dd>
-			<ul>
-				<li>
-					<a href="https://github.com/dominikwilkowski/vault/releases/latest/download/Vault-macos-14.zip" target="_blank" rel="noopener noreferrer">macOS 14</a>
-				</li>
-				<li>
-					<a href="https://github.com/dominikwilkowski/vault/releases/latest/download/Vault-macos-13.zip" target="_blank" rel="noopener noreferrer">macOS 13</a>
-				</li>
-				<li>
-					<a href="https://github.com/dominikwilkowski/vault/releases/latest/download/Vault-macos-12.zip" target="_blank" rel="noopener noreferrer">macOS 12</a>
-				</li>
-				<li>
-					<a href="https://github.com/dominikwilkowski/vault/releases/latest/download/Vault-macos-11.zip" target="_blank" rel="noopener noreferrer">macOS 11</a>
-				</li>
-			</ul>
-		</dd>
+			<dt>
+				<svg viewBox="12 0 60 60" fill="currentColor">
+					<path d="M55.816 50.848a9.915 9.915 0 01-1.52-1.147c-.24-.24 0-1.333 0-1.92a3.857 3.857 0 00-.533-3.12 2.434 2.434 0 00-.427-.32v-1.706a26.234 26.234 0 00-7.2-17.648 11.787 11.787 0 01-3.461-6.32v-.614c0-3.68 0-11.36-4-15.384A9.04 9.04 0 0032.008.003c-5.597 0-9.33 2.666-9.33 16a21.33 21.33 0 01-3.174 9.81c-.72 1.387-1.44 2.827-2.08 4.347a64.844 64.844 0 00-4.08 12.77 4.24 4.24 0 00-2.077 3.2l-.214.88a7.41 7.41 0 01-1.44.374c-1.6.32-4.266.853-4.266 3.28.008.653.08 1.307.213 1.947a8.56 8.56 0 01-.213 4.397 1.307 1.307 0 000 .347c0 3.173 4.986 3.6 8 3.973h1.173c.728.216 1.432.501 2.107.853a15.52 15.52 0 006.053 1.814 3.12 3.12 0 002.293-1.04h.134a15.84 15.84 0 016.904-1.627h8.16c.136.541.4 1.045.773 1.467a3.954 3.954 0 003.067 1.2 8.534 8.534 0 006.664-3.52l.853-.88a9.436 9.436 0 013.173-1.574c1.92-.693 3.894-1.413 3.894-3.36 0-1.946-1.52-2.96-2.774-3.813h-.005zM34.675 8.003c1.546 0 2.666 1.653 2.666 3.946 0 2.294-.88 3.574-2.16 3.867a2.186 2.186 0 00.774-1.813c0-1.094-.587-2-1.28-2-.694 0-1.28.88-1.28 2a2.186 2.186 0 00.773 1.813c-1.28-.32-2.16-1.867-2.16-3.867s1.12-3.946 2.667-3.946zm1.173 10.346a15.519 15.519 0 01-6.507 2.984 9.974 9.974 0 01-4-2.666A8.187 8.187 0 0130.675 16c1.908.288 3.699 1.1 5.173 2.347v.002zM26.675 8c1.546 0 2.666 1.653 2.666 3.947 0 2.293-.88 3.546-2.16 3.866A2.186 2.186 0 0027.955 14c0-1.093-.587-2-1.28-2-.694 0-1.28.88-1.28 2a2.187 2.187 0 00.773 1.813c-1.28-.32-2.16-1.84-2.16-3.866C24.008 9.92 25.128 8 26.675 8zm-3.28 52.552c-.16.507-.4.773-.72.773a13.705 13.705 0 01-4.987-1.6 11.84 11.84 0 00-2.667-1.066h-1.493c-3.97-.32-5.197-.8-5.464-1.174.48-1.74.526-3.571.133-5.333a8.96 8.96 0 01-.186-1.493 5.974 5.974 0 012.213-.694 5.334 5.334 0 002.667-1.04c.524-.624.865-1.38.986-2.186.347-1.414.48-1.414.667-1.414.8.934 1.435 2 1.867 3.147a14.933 14.933 0 004.106 5.973 6.053 6.053 0 012.88 6.107h-.002zm16.986-8c-3.92 3.947-11.76 3.68-15.226 3.147a9.706 9.706 0 00-3.067-3.44 13.334 13.334 0 01-3.227-4.934 10.667 10.667 0 00-2.666-4.186 63.662 63.662 0 013.813-11.944c.56-1.414 1.28-2.667 1.973-4.134a40.593 40.593 0 002.507-5.57 10.293 10.293 0 004.853 2.506 26.819 26.819 0 007.547-3.2 49.727 49.727 0 015.787 23.864 16.16 16.16 0 00-2.294 7.867v.027-.003zm13.488 2.987a11.172 11.172 0 00-4.133 2.213l-.907.933a6.053 6.053 0 01-4.824 2.667 1.466 1.466 0 01-1.093-.32c-.4-.453-.293-1.493-.267-1.92l.027-.453c0-.8.747-8.347.987-9.547.106.16.221.312.346.453a3.563 3.563 0 002.667 1.12h.933a5.331 5.331 0 003.92-1.2c.027.795.339 1.552.88 2.134a11.9 11.9 0 001.947 1.493c1.013.667 1.653 1.12 1.707 1.413a7.704 7.704 0 01-2.187.987v.027h-.003z"></path>
+				</svg>
+			</dt>
+			<dd>
+				<ul>
+					<li>
+						<a href="https://github.com/dominikwilkowski/vault/releases/latest/download/Vault-linux-redhat.zip" target="_blank" rel="noopener noreferrer">Linux Redhat</a>
+					</li>
+					<li>
+						<a href="https://github.com/dominikwilkowski/vault/releases/latest/download/Vault-linux-arch.zip" target="_blank" rel="noopener noreferrer">Linux Arch</a>
+					</li>
+				</ul>
+			</dd>
 
-		<dt>
-			<svg viewBox="12 0 60 60" fill="currentColor">
-				<path d="M55.816 50.848a9.915 9.915 0 01-1.52-1.147c-.24-.24 0-1.333 0-1.92a3.857 3.857 0 00-.533-3.12 2.434 2.434 0 00-.427-.32v-1.706a26.234 26.234 0 00-7.2-17.648 11.787 11.787 0 01-3.461-6.32v-.614c0-3.68 0-11.36-4-15.384A9.04 9.04 0 0032.008.003c-5.597 0-9.33 2.666-9.33 16a21.33 21.33 0 01-3.174 9.81c-.72 1.387-1.44 2.827-2.08 4.347a64.844 64.844 0 00-4.08 12.77 4.24 4.24 0 00-2.077 3.2l-.214.88a7.41 7.41 0 01-1.44.374c-1.6.32-4.266.853-4.266 3.28.008.653.08 1.307.213 1.947a8.56 8.56 0 01-.213 4.397 1.307 1.307 0 000 .347c0 3.173 4.986 3.6 8 3.973h1.173c.728.216 1.432.501 2.107.853a15.52 15.52 0 006.053 1.814 3.12 3.12 0 002.293-1.04h.134a15.84 15.84 0 016.904-1.627h8.16c.136.541.4 1.045.773 1.467a3.954 3.954 0 003.067 1.2 8.534 8.534 0 006.664-3.52l.853-.88a9.436 9.436 0 013.173-1.574c1.92-.693 3.894-1.413 3.894-3.36 0-1.946-1.52-2.96-2.774-3.813h-.005zM34.675 8.003c1.546 0 2.666 1.653 2.666 3.946 0 2.294-.88 3.574-2.16 3.867a2.186 2.186 0 00.774-1.813c0-1.094-.587-2-1.28-2-.694 0-1.28.88-1.28 2a2.186 2.186 0 00.773 1.813c-1.28-.32-2.16-1.867-2.16-3.867s1.12-3.946 2.667-3.946zm1.173 10.346a15.519 15.519 0 01-6.507 2.984 9.974 9.974 0 01-4-2.666A8.187 8.187 0 0130.675 16c1.908.288 3.699 1.1 5.173 2.347v.002zM26.675 8c1.546 0 2.666 1.653 2.666 3.947 0 2.293-.88 3.546-2.16 3.866A2.186 2.186 0 0027.955 14c0-1.093-.587-2-1.28-2-.694 0-1.28.88-1.28 2a2.187 2.187 0 00.773 1.813c-1.28-.32-2.16-1.84-2.16-3.866C24.008 9.92 25.128 8 26.675 8zm-3.28 52.552c-.16.507-.4.773-.72.773a13.705 13.705 0 01-4.987-1.6 11.84 11.84 0 00-2.667-1.066h-1.493c-3.97-.32-5.197-.8-5.464-1.174.48-1.74.526-3.571.133-5.333a8.96 8.96 0 01-.186-1.493 5.974 5.974 0 012.213-.694 5.334 5.334 0 002.667-1.04c.524-.624.865-1.38.986-2.186.347-1.414.48-1.414.667-1.414.8.934 1.435 2 1.867 3.147a14.933 14.933 0 004.106 5.973 6.053 6.053 0 012.88 6.107h-.002zm16.986-8c-3.92 3.947-11.76 3.68-15.226 3.147a9.706 9.706 0 00-3.067-3.44 13.334 13.334 0 01-3.227-4.934 10.667 10.667 0 00-2.666-4.186 63.662 63.662 0 013.813-11.944c.56-1.414 1.28-2.667 1.973-4.134a40.593 40.593 0 002.507-5.57 10.293 10.293 0 004.853 2.506 26.819 26.819 0 007.547-3.2 49.727 49.727 0 015.787 23.864 16.16 16.16 0 00-2.294 7.867v.027-.003zm13.488 2.987a11.172 11.172 0 00-4.133 2.213l-.907.933a6.053 6.053 0 01-4.824 2.667 1.466 1.466 0 01-1.093-.32c-.4-.453-.293-1.493-.267-1.92l.027-.453c0-.8.747-8.347.987-9.547.106.16.221.312.346.453a3.563 3.563 0 002.667 1.12h.933a5.331 5.331 0 003.92-1.2c.027.795.339 1.552.88 2.134a11.9 11.9 0 001.947 1.493c1.013.667 1.653 1.12 1.707 1.413a7.704 7.704 0 01-2.187.987v.027h-.003z"></path>
-			</svg>
-		</dt>
-		<dd>
-			<ul>
-				<li>
-					<a href="https://github.com/dominikwilkowski/vault/releases/latest/download/Vault-linux-redhat.zip" target="_blank" rel="noopener noreferrer">Linux Redhat</a>
-				</li>
-				<li>
-					<a href="https://github.com/dominikwilkowski/vault/releases/latest/download/Vault-linux-arch.zip" target="_blank" rel="noopener noreferrer">Linux Arch</a>
-				</li>
-			</ul>
-		</dd>
+			<dt>
+				<svg viewBox="0 0 100 100" fill="currentColor">
+					<path d="m0,12.402,35.687-4.8602,0.0156,34.423-35.67,0.20313zm35.67,33.529,0.0277,34.453-35.67-4.9041-0.002-29.78zm4.3261-39.025,47.318-6.906,0,41.527-47.318,0.37565zm47.329,39.349-0.0111,41.34-47.318-6.6784-0.0663-34.739z"></path>
+				</svg>
+			</dt>
+			<dd>
+				<ul>
+					<li>
+						<a href="https://github.com/dominikwilkowski/vault/releases/latest/download/Vault-windows-latest.zip" target="_blank" rel="noopener noreferrer">Windows</a>
+					</li>
+				</ul>
+			</dd>
+		</dl>
+	</section>
 
-		<dt>
-			<svg viewBox="0 0 100 100" fill="currentColor">
-				<path d="m0,12.402,35.687-4.8602,0.0156,34.423-35.67,0.20313zm35.67,33.529,0.0277,34.453-35.67-4.9041-0.002-29.78zm4.3261-39.025,47.318-6.906,0,41.527-47.318,0.37565zm47.329,39.349-0.0111,41.34-47.318-6.6784-0.0663-34.739z"></path>
-			</svg>
-		</dt>
-		<dd>
-			<ul>
-				<li>
-					<a href="https://github.com/dominikwilkowski/vault/releases/latest/download/Vault-windows-latest.zip" target="_blank" rel="noopener noreferrer">Windows</a>
-				</li>
-			</ul>
-		</dd>
-	</dl>
-</section>
+	<section class="showcase">
+		<figure>
+			<img src="assets/screenshot-home.png" alt="A screenshot of the home screen showing TODO" style="width: 912px" />
+			<figcaption>
+				TODO Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+				tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
+				quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
+				consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
+				cillum dolore eu fugiat nulla pariatur.
+			</figcaption>
+		</figure>
+	</section>
 
+	<section class="showcase">
+		<figure>
+			<img src="assets/screenshot-passgen.png" alt="A screenshot of TODO" style="width: 912px" />
+			<figcaption>
+				TODO Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+				tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
+				quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
+				consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
+				cillum dolore eu fugiat nulla pariatur.
+			</figcaption>
+		</figure>
+	</section>
 
+	<section class="showcase">
+		<figure>
+			<img src="assets/screenshot-passgen.png" alt="A screenshot of TODO" style="width: 912px" />
+			<figcaption>
+				TODO Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+				tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
+				quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
+				consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
+				cillum dolore eu fugiat nulla pariatur.
+			</figcaption>
+		</figure>
+	</section>
 
-	<script src="assets/script.js"></script>
+	<section class="showcase">
+		<figure>
+			<img src="assets/screenshot-lock.png" alt="A screenshot of TODO" style="width: 912px" />
+			<figcaption>
+				TODO Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+				tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
+				quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
+				consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
+				cillum dolore eu fugiat nulla pariatur.
+			</figcaption>
+		</figure>
+	</section>
+
+	<section class="showcase">
+		<figure>
+			<img src="assets/screenshot-non-destructive.png" alt="A screenshot of TODO" style="width: 912px" />
+			<figcaption>
+				TODO Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+				tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
+				quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
+				consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
+				cillum dolore eu fugiat nulla pariatur.
+			</figcaption>
+		</figure>
+	</section>
+
+	<section class="showcase">
+		<figure>
+			<img src="assets/screenshot-history.png" alt="A screenshot of TODO" style="width: 462px" />
+			<figcaption>
+				TODO Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+				tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
+				quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
+				consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
+				cillum dolore eu fugiat nulla pariatur.
+			</figcaption>
+		</figure>
+	</section>
+
+	<section class="showcase">
+		<figure>
+			<img src="assets/screenshot-settings.png" alt="A screenshot of TODO" style="width: 612px" />
+			<figcaption>
+				TODO Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+				tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
+				quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
+				consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
+				cillum dolore eu fugiat nulla pariatur.
+			</figcaption>
+		</figure>
+	</section>
+
+	<section class="showcase">
+		<figure>
+			<img src="assets/screenshot-db.png" alt="A screenshot of TODO" style="width: 920px" />
+			<figcaption>
+				TODO Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+				tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
+				quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
+				consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
+				cillum dolore eu fugiat nulla pariatur.
+			</figcaption>
+		</figure>
+	</section>
+
+	<footer>
+		TODO
+	</footer>
+
+</main>
+<script src="assets/script.js"></script>
 </body>
 </html>
