added responsive designs, tweaked text, removed unneeded logos

--- a/website/index.html
+++ b/website/index.html
@@ -10,7 +10,7 @@
 	<body class="marketing-bs">
 		<main>
 			<header>
-				<button id="marketing-bs-btn" class="bs-btn">
+				<button id="marketing-bs-btn" class="btn bs-btn">
 					<span class="plain">Enable</span>
 					<span class="marketing-bs">Disable</span>
 					Marketing BS
@@ -26,10 +26,8 @@
 
 			<section class="hero">
 				<picture class="logo">
-					<source media="(max-width: 320px)" srcset="assets/logo-128.webp" />
-					<source media="(max-width: 600px)" srcset="assets/logo-256.webp" />
-					<source media="(max-width: 700px)" srcset="assets/logo-512.webp" />
-					<source media="(max-width: 70rem)" srcset="assets/logo-1024.webp" />
+					<source media="(max-width: 53rem)" srcset="assets/logo-512.webp" />
+					<source media="(max-width: 72rem)" srcset="assets/logo-1024.webp" />
 					<img
 						src="assets/logo-2048.webp"
 						alt="The Vault logo which is a rusty circular vault door with a hindge on the left and big bolts alla round it's edge"
@@ -40,8 +38,9 @@
 
 				<p class="lead">
 					<span class="plain">
-						This is a password manager for macOS and Windows and some Linux
-						dists written as a hobby in rust.<br>
+						Here's a rust app.<br>
+						Hobby shit.<br>
+						You know &hellip; go nuts.<br><br>
 						We focused on encryption and <mark>memory safety</mark> when the app
 						is locked.
 					</span>
@@ -312,7 +311,7 @@
 					<img
 						src="assets/screenshot-history.png"
 						alt="A screenshot of the histroy window that shows a list of values for that field with dates and buttons. Each value is hidden with dots and the top two entries are revealed to clear text."
-						style="max-width: 462px"
+						style="max-width: 912px"
 					/>
 					<figcaption>
 						<div class="plain">
