added favicon and og-image

--- a/website/index.html
+++ b/website/index.html
@@ -3,9 +3,35 @@
 	<head>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
+
+		<link rel="apple-touch-icon" sizes="180x180" href="assets/apple-touch-icon.png">
+		<link rel="icon" type="image/png" sizes="32x32" href="assets/favicon-32x32.png">
+		<link rel="icon" type="image/png" sizes="16x16" href="assets/favicon-16x16.png">
+		<link rel="manifest" href="assets/site.webmanifest">
+		<link rel="mask-icon" href="assets/safari-pinned-tab.svg" color="#2e2e2e">
+		<link rel="shortcut icon" href="assets/favicon.ico">
+		<meta name="msapplication-TileColor" content="#f5f5ef">
+		<meta name="msapplication-config" content="assets/browserconfig.xml">
+		<meta name="theme-color" content="#f5f5ef">
+
+		<meta property="og:type" content="website" />
+		<meta property="og:url" content="https://rustyvault.com/" />
+		<meta property="og:title" content="Vault - The secure rusty password manager" />
+		<meta property="og:description" content="Discover this open source multi-platform password manager, crafted in Rust for top performance. It stays on your computer, featuring a heavily encrypted database that's easily accessible and boasts a user-friendly interface." />
+		<meta property="og:image" content="https://rustyvault.com/assets/og-image.png" />
+
+		<meta property="twitter:card" content="summary_large_image" />
+		<meta property="twitter:url" content="https://rustyvault.com/" />
+		<meta property="twitter:title" content="Vault - The secure rusty password manager" />
+		<meta property="twitter:description" content="Discover this open source multi-platform password manager, crafted in Rust for top performance. It stays on your computer, featuring a heavily encrypted database that's easily accessible and boasts a user-friendly interface." />
+		<meta property="twitter:image" content="https://rustyvault.com/assets/og-image.png" />
+
+		<title>Vault - The secure rusty password manager</title>
+		<meta name="title" content="Vault - The secure rusty password manager" />
+		<meta name="description" content="Discover this open source multi-platform password manager, crafted in Rust for top performance. It stays on your computer, featuring a heavily encrypted database that's easily accessible and boasts a user-friendly interface." />
+
 		<link rel="stylesheet" type="text/css" href="assets/normalize.css" />
 		<link rel="stylesheet" type="text/css" href="assets/styles.css" />
-		<title>Rusty Vault</title>
 	</head>
 	<body class="marketing-bs">
 		<main>
