added version to website

--- a/website/index.html
+++ b/website/index.html
@@ -102,6 +102,7 @@
 							></path>
 						</svg>
 						Download
+						<span class="version">{{VERSION}}</span>
 					</a
 				>
 				<dl class="downloadlist">
