kicked off website deploy

--- a/website/index.html
+++ b/website/index.html
@@ -374,7 +374,7 @@
 					target="_blank"
 					rel="noopener noreferrer"
 					>on Github</a>.<br>
-				Built by Dominik Wilkowski & Joshua Padman.<br>
+				Built by Dominik Wilkowski & Joshua Padman.<br><br>
 				With Love.
 			</footer>
 		</main>
