--- a/index.html
+++ b/index.html
@@ -102,6 +102,7 @@
 							></path>
 						</svg>
 						Download
+						<span class="version">"1.0.0-beta2"</span>
 					</a
 				>
 				<dl class="downloadlist">
@@ -373,7 +374,7 @@
 					target="_blank"
 					rel="noopener noreferrer"
 					>on Github</a>.<br>
-				Built by Dominik Wilkowski & Joshua Padman.<br>
+				Built by Dominik Wilkowski & Joshua Padman.<br><br>
 				With Love.
 			</footer>
 		</main>
