deploy: 920560efd22c0523747aa66e2baa9c43e75948ef

--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
 
 				<p class="lead">
 					<span class="plain">
-						Here's a rust app.<br>
+						Here&apos;s a rust app.<br>
 						Hobby shit.<br>
 						You know &hellip; go nuts.<br><br>
 						We focused on encryption and <mark>memory safety</mark> when the app
@@ -74,7 +74,7 @@
 						Discover this open source multi-platform password manager, crafted in
 						Rust for top performance.<br>
 						It <mark>stays on your computer</mark>, featuring a heavily encrypted
-						database that's easily accessible and boasts a user-friendly
+						database that&apos;s easily accessible and boasts a user-friendly
 						interface.
 					</span>
 				</p>
@@ -102,7 +102,7 @@
 							></path>
 						</svg>
 						Download
-						<span class="version">"1.0.0-beta2"</span>
+						<span class="version">1.0.0-beta2</span>
 					</a
 				>
 				<dl class="downloadlist">
@@ -218,7 +218,7 @@
 						<div class="marketing-bs">
 							<h2>Dynamic fields</h2>
 							Tailor your entries to fit your needs, ensuring all your data is
-							accessible and secure with Vault's
+							accessible and secure with Vault&apos;s
 							<mark>flexible entry system</mark> of both secret and non-secret
 							information in single-line or multi-line formats.
 						</div>
@@ -238,12 +238,12 @@
 							Creating <mark>randomness is hard</mark> on a computer. We use
 							<code>OsRng</code> which reads from <code>/dev/urandom</code> or
 							<code>getrandom(2)</code> on Unix-like systems and
-							<code>CNG</code> or <code>CryptoAPI</code> depending on what's
+							<code>CNG</code> or <code>CryptoAPI</code> depending on what&apos;s
 							available.
 						</div>
 						<div class="marketing-bs">
 							<h2>Easy editing</h2>
-							Enhance your security with Vault's
+							Enhance your security with Vault&apos;s
 							<mark>advanced password generator</mark>, utilizing system entropy
 							for truly random and robust passwords.
 						</div>
@@ -285,7 +285,7 @@
 					<figcaption>
 						<div class="plain">
 							<h2>Non-destructive</h2>
-							<mark>You can't delete stuff</mark> in Vault. It will either be
+							<mark>You can&apos;t delete stuff</mark> in Vault. It will either be
 							added to the history stack or moved to an archived status from
 							which you can always get it back.
 						</div>
@@ -309,7 +309,7 @@
 							<h2>Edit history</h2>
 							Every secret field has <mark>a history stack</mark> you can always
 							recall. It stores the time you made changes to a field. This way
-							you can make sure you don't re-use passwords and don't
+							you can make sure you don&apos;t re-use passwords and don&apos;t
 							accidentally override a password.
 						</div>
 						<div class="marketing-bs">
@@ -354,12 +354,12 @@
 							<h2>Encrypted database</h2>
 							Vault uses a <code>TOML</code> file to store the database in.
 							The data inside is <mark>always encrypted</mark> and you could
-							backup that file anywhere as long as you don't also store your
+							backup that file anywhere as long as you don&apos;t also store your
 							password.
 						</div>
 						<div class="marketing-bs">
 							<h2>Encrypted database</h2>
-							Access your database effortlessly with Vault's encrypted TOML file,
+							Access your database effortlessly with Vault&apos;s encrypted TOML file,
 							secured using the <mark>AES256GcmSiv</mark> algorithm for maximum
 							protection.
 						</div>
